--- a/task.html
+++ b/task.html
@@ -4,30 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Countdown</title>
-<style>
-  body{
-    background-color: rgb(65, 65, 50);
-    color:rgb(79, 237, 95);
-  }
-  div{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    height: 600px;
-  }
-  #countdown {
-    font-size: 48px;
-  }
-  button {
-    font-size: 36px;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
 
 <div id="countdown">
 
