--- a/index.html
+++ b/index.html
@@ -6,37 +6,10 @@
 <title>Countdown</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
-
-<div id="countdown">
-
-  <button onclick="countdown(10, updateCountdown)"> Click </button>
-
-</div>
-
-
-<script>
-  function countdown(number, callback) {
-    setTimeout(function() {
-      callback(number);
-      if (number > 1) {
-        countdown(number - 1, callback);
-      } else {
-        setTimeout(function() {
-          callback("Happy Independence Day!!!");
-        }, 1000); 
-      }
-    }, 1000); 
-  }
-
-  function updateCountdown(count) {
-    document.getElementById('countdown').innerText = count;
-  }
-
-  // countdown(10, updateCountdown);
-</script>
-
+  <div id="countdown"> 
+    <button onclick="countdown(10, updateCountdown)"> Click </button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
